@@ -1,3 +1,8 @@
+Wed Mar 2 22:54:07 2005  Alex Waugh  <alex@alexwaugh.com>
+
+	* source/unix/unix.c: Fix parsing for commandline redirection when
+	  the command line contains quotes.
+
 Sat Feb 12 13:44:21 2005  Alex Waugh  <alex@alexwaugh.com>
 
 	* source/pthread/_context.s: Disable context switching in
